--- a/src/app/Login/register/register.component.scss
+++ b/src/app/Login/register/register.component.scss
@@ -25,3 +25,9 @@
   width: 500px;
   margin-left: 30%;
 }
+
+.cont {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
